[gd_scene load_steps=14 format=3 uid="uid://cq0phrpnt3chg"]

[ext_resource type="Script" path="res://Objects/dir_lamp.gd" id="1_tdmic"]
[ext_resource type="PackedScene" uid="uid://dwr8yl8hr8xas" path="res://Objects/interaction_area.tscn" id="2_a2fkd"]
[ext_resource type="PackedScene" uid="uid://cgvl13j3w3swv" path="res://Objects/shadow_area.tscn" id="3_1ao5h"]
[ext_resource type="PackedScene" uid="uid://6b4gnqagoxba" path="res://Objects/light_area.tscn" id="4_mswtf"]
[ext_resource type="Texture2D" uid="uid://bcn2khk820twh" path="res://Art/Original Assets/Lamp.png" id="5_sfmgv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7nijh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hvfl7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rc3cv"]
atlas = ExtResource("5_sfmgv")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_75xnf"]
atlas = ExtResource("5_sfmgv")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xp71x"]
atlas = ExtResource("5_sfmgv")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_umkbr"]
atlas = ExtResource("5_sfmgv")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_80ed2"]
atlas = ExtResource("5_sfmgv")
region = Rect2(48, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_o7tab"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rc3cv")
}],
"loop": false,
"name": &"default",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_75xnf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xp71x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_umkbr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80ed2")
}],
"loop": true,
"name": &"idle_lit",
"speed": 3.0
}]

[node name="dir_lamp" type="StaticBody2D"]
collision_layer = 4
collision_mask = 7
script = ExtResource("1_tdmic")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_7nijh")

[node name="interaction_area" parent="." instance=ExtResource("2_a2fkd")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="interaction_area"]
visible = false
shape = SubResource("RectangleShape2D_hvfl7")

[node name="shadow_area_left" parent="." instance=ExtResource("3_1ao5h")]
visible = false
position = Vector2(-11, 0)
rotation = 1.5708

[node name="shadow_area_right" parent="." instance=ExtResource("3_1ao5h")]
visible = false
position = Vector2(11, 0)
rotation = -1.5708

[node name="shadow_area_up" parent="." instance=ExtResource("3_1ao5h")]
visible = false
position = Vector2(0, -11)
rotation = 3.14159

[node name="shadow_area_down" parent="." instance=ExtResource("3_1ao5h")]
visible = false
position = Vector2(0, 11)

[node name="light_area_left" parent="." instance=ExtResource("4_mswtf")]
visible = false
position = Vector2(-11, 0)
rotation = 1.5708

[node name="light_area_right" parent="." instance=ExtResource("4_mswtf")]
visible = false
position = Vector2(11, 0)
rotation = -1.5708

[node name="light_area_up" parent="." instance=ExtResource("4_mswtf")]
visible = false
position = Vector2(0, -11)
rotation = 3.14159

[node name="light_area_down" parent="." instance=ExtResource("4_mswtf")]
visible = false
position = Vector2(0, 11)

[node name="RayCast2D" type="RayCast2D" parent="."]
rotation = 1.5708
target_position = Vector2(0, 480)
collision_mask = 5

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_o7tab")
